--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="bouquetContainer">
         <img src="flower.png" alt="Rose Bouquet" id="roseBouquet">
-        <div id="speechBubble">I'm sorry ammu. This is for you :)</div>
+        <div id="speechBubble">I'm sorry ammu. Hope revision is going well, this is for you. Fightingg!!!</div>
     </div>
     <script src="script.js"></script>
 </body>
